WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105321
[CSS Shaders] Detached identifier after mesh box type is not applied
https://bugs.webkit.org/show_bug.cgi?id=105321
Summary
[CSS Shaders] Detached identifier after mesh box type is not applied
Max Vujovic
Reported
2012-12-18 10:00:44 PST
If the "detached" identifier follows a mesh box type identifier, the detached identifier is not applied. In other words, the mesh is still attached. For example: -webkit-filter: custom(url(shader.vs) mix(url(shader.fs) normal source-atop), 1 1 border-box detached); Although the mesh box type is being removed from the Filter Effects spec, for now, we continue to accept the mesh box type in parsing because of existing content. Eventually, custom filters will transition to an at-rule syntax, once it is defined. Patch coming up.
Attachments
Patch
(23.34 KB, patch)
2013-01-03 09:52 PST
,
Max Vujovic
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Max Vujovic
Comment 1
2013-01-03 09:52:23 PST
Created
attachment 181181
[details]
Patch
Max Vujovic
Comment 2
2013-01-09 15:04:03 PST
Comment on
attachment 181181
[details]
Patch Thanks for the review! Setting cq+.
WebKit Review Bot
Comment 3
2013-01-09 15:15:12 PST
Comment on
attachment 181181
[details]
Patch Clearing flags on attachment: 181181 Committed
r139248
: <
http://trac.webkit.org/changeset/139248
>
WebKit Review Bot
Comment 4
2013-01-09 15:15:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug