[CSS Shaders] Detached identifier after mesh box type is not applied https://bugs.webkit.org/show_bug.cgi?id=105321

Reviewed by Dean Jackson.

Source/WebCore:

Before this patch, if a "detached" identifier followed a mesh box type identifier, the
detached identifier was not applied. In other words, the mesh would still be attached.

For example:
-webkit-filter: custom(url(...) mix(url(...) normal source-atop), 1 1 border-box detached);

Although the mesh box type is being removed from the Filter Effects spec, for now, we
continue to accept the mesh box type in parsing because of existing content. Eventually,
custom filters will transition to an at-rule syntax, once it is defined.

Test: css3/filters/custom/custom-filter-detached-mesh-with-mesh-box-type.html

* css/CSSParser.cpp:
(WebCore::CSSParser::parseCustomFilter):
    In CSSParser, do not add the mesh box type identifier to the list that will be passed to
    StyleResolver. StyleResolver is expecting a "detached" identifier in that position and
    does not interpret mesh box types.

LayoutTests:

Add a test to verify that a "detached" identifier after a mesh box type identifier is
actually applied.

For example:
-webkit-filter: custom(url(...) mix(url(...) normal source-atop), 1 1 border-box detached);

Update parsing tests and expectations to expect that the mesh box type is not returned in
the cssText.

* css3/filters/custom/custom-filter-detached-mesh-with-mesh-box-type-expected.html: Added.
* css3/filters/custom/custom-filter-detached-mesh-with-mesh-box-type.html: Added.
* css3/filters/custom/custom-filter-property-parsing-expected.txt:
* css3/filters/script-tests/custom-filter-property-parsing.js:
* css3/filters/resources/a-triangle-coord-defined.vs: Added.
* platform/chromium/css3/filters/custom/custom-filter-property-parsing-expected.txt:


Canonical link: https://commits.webkit.org/124697@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139248 268f45cc-cd09-0410-ab3c-d52691b4dbfc