LayoutTests/css3/filters/script-tests/custom-filter-property-parsing.js
@@ -189,32 +189,32 @@ testFilterRule("Multiple array()",
             "custom(none url(fragment.shader), t4 array(1, -2.2, 3.14, 0.4, 5), t5 array(1, 2, 3))",
             "custom(none url(fragment.shader), t4 array(1, -2.2, 3.14, 0.4, 5), t5 array(1, 2, 3))");
 
-// TODO: The following tests are due to be removed along with the mesh box types parsing code.
-// See: https://bugs.webkit.org/show_bug.cgi?id=103778
+// FIXME: The following tests will be removed along with the mesh box types parsing code.
+// https://bugs.webkit.org/show_bug.cgi?id=103778
 testFilterRule("Legacy - Custom with mesh box sizes and content-box",
             "custom(none url(fragment.shader), 1 1 content-box)",
-            "custom(none url(fragment.shader), 1 1 content-box)");
+            "custom(none url(fragment.shader), 1 1)");
 
 testFilterRule("Legacy - Custom with mesh box sizes and border-box",
             "custom(none url(fragment.shader), 1 1 border-box)",
-            "custom(none url(fragment.shader), 1 1 border-box)");
+            "custom(none url(fragment.shader), 1 1)");
 
 testFilterRule("Legacy - Custom with mesh box sizes and padding-box",
             "custom(none url(fragment.shader), 1 1 padding-box)",
-            "custom(none url(fragment.shader), 1 1 padding-box)");
+            "custom(none url(fragment.shader), 1 1)");
 
 testFilterRule("Legacy - Custom with partial mesh box size and padding-box",
             "custom(none url(fragment.shader), 10 padding-box)",
-            "custom(none url(fragment.shader), 10 padding-box)");
+            "custom(none url(fragment.shader), 10)");
 
 testFilterRule("Legacy - Custom with padding-box and detached",
             "custom(none url(fragment.shader), padding-box detached)",
-            "custom(none url(fragment.shader), padding-box detached)");
+            "custom(none url(fragment.shader), detached)");
 
 testFilterRule("Legacy - Custom with both mesh-sizes and padding-box",
             "custom(none url(fragment.shader), 10 20 padding-box)",
-            "custom(none url(fragment.shader), 10 20 padding-box)");
+            "custom(none url(fragment.shader), 10 20)");
 
 testFilterRule("Legacy - Custom with mesh-sizes, padding-box and detached",
             "custom(none url(fragment.shader), 10 20 padding-box detached)",
-            "custom(none url(fragment.shader), 10 20 padding-box detached)");
+            "custom(none url(fragment.shader), 10 20 detached)");
